[gd_scene load_steps=5 format=3 uid="uid://ilo8xf1uyi82"]

[ext_resource type="Theme" uid="uid://cngjpr8wsvuo6" path="res://ui/ui_theme.tres" id="1_m06y4"]
[ext_resource type="Script" path="res://lobby.gd" id="1_t5nsh"]
[ext_resource type="Script" path="res://PortNumber.gd" id="2_45vcu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rl02s"]
bg_color = Color(0.28485, 0.28485, 0.28485, 1)

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_m06y4")
script = ExtResource("1_t5nsh")

[node name="Panel" type="Panel" parent="."]
modulate = Color(0.505882, 0.521569, 0.533333, 0.607843)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rl02s")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -125.0
offset_right = 250.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Lobby"

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BootOptions" type="VBoxContainer" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BootOptions"]
layout_mode = 2
text = "Address"

[node name="ConnectAddress" type="LineEdit" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BootOptions"]
layout_mode = 2

[node name="Label2" type="Label" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BootOptions"]
layout_mode = 2
text = "Select Team"

[node name="PortNumber" type="OptionButton" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BootOptions"]
layout_mode = 2
script = ExtResource("2_45vcu")

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BootOptions"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BootOptions"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BootOptions"]
layout_mode = 2
alignment = 1

[node name="Host" type="Button" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BootOptions/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host"

[node name="Join" type="Button" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BootOptions/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("..")

[node name="ErrorWindow" type="AcceptDialog" parent="."]

[connection signal="pressed" from="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BootOptions/HBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BootOptions/HBoxContainer/Join" to="." method="_on_join_pressed"]
